--- a/s649_DummyPracticeMod.csproj
+++ b/s649_DummyPracticeMod.csproj
@@ -26,7 +26,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>G:\SteamLibrary\steamapps\common\Elin\Package\Mod_s649_DummyPracticeMod_v1.0\</OutputPath>
+    <OutputPath>G:\SteamLibrary\steamapps\common\Elin\Package\Mod_s649_DummyPracticeMod_v1.1\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -92,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="memo.txt" />
+    <Content Include="memos\desc.txt" />
     <Content Include="package.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
